volume-nginx-example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: webapp
spec:
  ingressClassName: nginx
  rules:
    - host: webapp.linuxeval.eu.org
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: webapp-service
                port:
                  number: 80
            path: /
  tls:
  - hosts:
    - webapp.linuxeval.eu.org
    secretName: webapp-staging-tls
